--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -94,6 +94,7 @@
     "supportFundPage": {
       "title": "Ajude o Fundo",
       "subtitle": "Quanto você quer contribuir?",
+      "subtitleCard": "Escolha sua contribuição",
       "buttonText": "Confirmar doação",
       "disabledButtonText": "Insira uma quantidade de USDC",
       "insufficientBalanceText": "Saldo de USDC insuficiente",
