feat: add pages link to toggle

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -107,7 +107,8 @@
       "cryptocurrency": "Cryptocurrency",
       "givingsPage": {
         "title": "Your Givings"
-      }
+      },
+      "buttonTextCard": "Next"
     }
   },
   "contexts": {
