refactor: add CardSection translation texts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -97,7 +97,6 @@
     "supportFundPage": {
       "title": "Support the Fund",
       "subtitle": "How much do you want to give?",
-      "subtitleCard": "Choose your giving",
       "buttonText": "Confirm giving",
       "disabledButtonText": "Enter any USDC amount",
       "insufficientBalanceText": "Insufficient USDC balance",
@@ -111,7 +110,11 @@
       "givingsPage": {
         "title": "Your Givings"
       },
-      "buttonTextCard": "Next"
+      "cardSection": {
+        "currency": "Currency",
+        "subtitleCard": "Choose your giving",
+        "buttonTextCard": "Next"
+      }
     }
   },
   "contexts": {
