feat: makes the entire toast component clickable

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -87,7 +87,7 @@
         "processingText": "Processing transaction...",
         "transactionSuccessText": "Transaction successful",
         "transactionFailedText": "Transaction failed",
-        "linkMessageToast": "Learn More"
+        "linkMessageToast": "Learn more"
       },
       "modalOnboarding": {
         "title": "Ribon’s Donation Fund",
@@ -116,7 +116,7 @@
         "subtitleCard": "Choose your giving",
         "buttonTextCard": "Next"
       },
-      "linkMessageToast": "Learn More"
+      "linkMessageToast": "Learn more"
     }
   },
   "contexts": {
