feat: adjust your givings card

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -83,7 +83,7 @@
         "linkTransactionText": "See transaction",
         "textLastCard": "Show your givings",
         "firstGivingButtonText": "Give now",
-        "firstGivingText": "Make your first giving",
+        "firstGivingText": "Make a giving and you’ll see it here",
         "subtitleGivings": "Your givings",
         "processingText": "Processing transaction...",
         "transactionSuccessText": "Transaction successful",
