--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -83,7 +83,7 @@
         "linkTransactionText": "Ver transação",
         "textLastCard": "Suas contribuições",
         "firstGivingButtonText": "Contribua agora",
-        "firstGivingText": "Faça sua primeira doação",
+        "firstGivingText": "Faça uma contribuição e veja ela aqui",
         "subtitleGivings": "Suas contribuições",
         "processingText": "Processando transação...",
         "transactionSuccessText": "Transação processada",
