feat: adjust copy modal causes onboarding

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,7 @@
   "donations": {
     "causesPage": {
       "donationModalTitle": "You got a donation ticket",
-      "donationModalBody": "Use your daily tickets to make donations to be sponsored by Ribon’s supporters.",
+      "donationModalBody": "Use your free ticket to make a donation",
       "donationModalButtonText": "Continue",
       "confirmModalTitle": "Enter your e-mail to use your ticket",
       "confirmModalAuthTitle": "Confirm your donation",
