--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,8 +1,8 @@
 {
   "donations": {
     "causesPage": {
-      "donationModalTitle": "Doe de graça!",
-      "donationModalBody": "Use seus tickets diários para fazer doações a serem patrocinadas pelos apoiadores da Ribon.",
+      "donationModalTitle": "Você recebeu um ticket doação",
+      "donationModalBody": "Use seu ticket gratuito para fazer uma doação",
       "donationModalButtonText": "Continuar",
       "confirmModalTitle": "Insira seu e-mail para usar seu vale doação",
       "confirmModalAuthTitle": "Confirmar doação",
