feat: adjust text and remove subtitle page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,10 +8,9 @@
       "confirmModalAuthTitle": "Confirm your donation",
       "confirmModalPrimaryButtonText": "Confirm",
       "confirmModalSecondaryButtonText": "Cancel",
-      "donateText": "Donate",
+      "donateText": "Use ticket",
       "donateBlockedText": "Blocked",
       "pageTitle": "Causes",
-      "pageSubtitle": "Donate for free for a cause of your choice",
       "errorModalTitle": "Process failed",
       "errorModalText": "It was not possible to finish this action. Please, check your internet connection and try again.",
       "errorModalButtonText": "Ok",
