--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -8,10 +8,9 @@
       "confirmModalAuthTitle": "Confirmar doação",
       "confirmModalPrimaryButtonText": "Confirmar",
       "confirmModalSecondaryButtonText": "Cancelar",
-      "donateText": "Doar",
+      "donateText": "Usar ticket",
       "donateBlockedText": "Bloqueado",
       "pageTitle": "Causas",
-      "pageSubtitle": "Doe de graça para uma causa de sua escolha",
       "errorModalTitle": "Falha no processo",
       "errorModalText": "Não foi possível concluir esta ação. Por favor verifique sua conexão com a internet e tente novamente.",
       "errorModalButtonText": "Ok",
