feat: adjust copy modal

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,7 +4,7 @@
       "donationModalTitle": "Doe de graça!",
       "donationModalBody": "Use seus tickets diários para fazer doações a serem patrocinadas pelos apoiadores da Ribon.",
       "donationModalButtonText": "Continuar",
-      "confirmModalTitle": "Insira seu e-mail para usar seu vale doação",
+      "confirmModalTitle": "Entre ou registre-se para usar seu ticket doação",
       "confirmModalAuthTitle": "Confirmar doação",
       "confirmModalPrimaryButtonText": "Confirmar",
       "confirmModalSecondaryButtonText": "Cancelar",
