adjust copy donation processing

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -38,7 +38,7 @@
     },
     "donationInProcess": {
       "animationText": "Doando...",
-      "impactText": "Os apoiadores da Ribon são os responsáveis pelo pagamento das doações gratuitas"
+      "impactText": "Essa doação é financiada pelo Tesouro de Doação da Ribon"
     },
     "menu": {
       "impactPageTitle": "Impacto",
