--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -43,7 +43,7 @@
     "menu": {
       "impactPageTitle": "Impact",
       "causesPageTitle": "Causes",
-      "fundPageTitle": "Fund"
+      "treasurePageTitle": "Treasure"
     }
   },
   "layouts": {
@@ -75,7 +75,7 @@
   },
   "promoters": {
     "fundPage": {
-      "title": "Fund",
+      "title": "Treasure",
       "subtitle": "Help charities by funding donation tickets",
       "fundBalance": "Fund balance",
       "fundSupportButtonText": "Support the fund",
