--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -66,7 +66,7 @@
   },
   "impactPage": {
     "title": "Impacto",
-    "subtitle": "Você usou {{ticketsUsed}} tickets",
+    "subtitle": "Você usou {{ticketsUsed}} tickets doação",
     "impactText": "Você doou ",
     "button": "Ver todos",
     "noImpactText": "O resumo do impacto das suas doações será mostrado aqui",
