feat: adjus copy and icon from modal onboarding treasure page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -90,8 +90,8 @@
         "linkMessageToast": "Learn more"
       },
       "modalOnboarding": {
-        "title": "Ribon’s Donation Fund",
-        "subtitle": "The fund is used to pay the free donations made using daily tickets",
+        "title": "Ribon’s Donation Treasure",
+        "subtitle": "The free donation tickets you get are funded by this treasure",
         "button": "Ok"
       }
     },
