feat: adjust screen copys of USDC values + adjust color and highlight for balance

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -95,13 +95,13 @@
       }
     },
     "supportFundPage": {
-      "title": "Support the Fund",
+      "title": "Your giving",
       "subtitle": "How much do you want to give?",
       "buttonText": "Confirm giving",
-      "disabledButtonText": "Enter any USDC amount",
+      "disabledButtonText": "Enter a USDC amount",
       "insufficientBalanceText": "Insufficient USDC balance",
       "networkText": "*Make sure your wallet is set up to the Polygon network.",
-      "usdcBalanceText": "USDC balance: {{balance}}",
+      "usdcBalanceText": "Your balance: {{balance}} USDC",
       "tokenAmountTransferMessage": "Approving token amount transfer...",
       "contractTransferMessage": "Transferring to contract...",
       "card": "Card",
