--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -95,13 +95,13 @@
       }
     },
     "supportFundPage": {
-      "title": "Ajude o Fundo",
-      "subtitle": "Quanto você quer contribuir?",
+      "title": "Sua contribuição",
+      "subtitle": "Com quanto você quer contribuir?",
       "buttonText": "Confirmar doação",
       "disabledButtonText": "Insira uma quantidade de USDC",
       "insufficientBalanceText": "Saldo de USDC insuficiente",
       "networkText": "*Certifique-se de conectar sua carteira à rede da Polygon.",
-      "usdcBalanceText": "Saldo de USDC: {{balance}}",
+      "usdcBalanceText": "Seu saldo: {{balance}} USDC",
       "tokenAmountTransferMessage": "Aprovando quantidade de tokens pra transação...",
       "contractTransferMessage": "Transferindo pro contrato...",
       "card": "Cartão",
