refactor: small adjustments

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -114,10 +114,10 @@
         "currency": "Moeda",
         "subtitleCard": "Escolha sua contribuição",
         "buttonTextCard": "Próximo",
-        "detailsSubtitle": "Detalhes da Contribuição",
+        "detailsSubtitle": "Detalhes da contribuição",
         "netGivingText": "Contribuição líquida: {{netGiving}}*",
         "serviceFeesText": "Taxas de serviço: {{serviceFees}}",
-        "cryptoValueText": "A contribuição será convertida em criptomoedas ({{cryptoGivings}})"
+        "cryptoValueText": "*A contribuição será convertida em criptomoedas ({{cryptoGivings}})"
       },
       "linkMessageToast": "Saiba mais"
     }
