--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -114,10 +114,10 @@
         "currency": "Currency",
         "subtitleCard": "Choose your giving",
         "buttonTextCard": "Next",
-        "detailsSubtitle": "Giving Details",
+        "detailsSubtitle": "Giving details",
         "netGivingText": "Net giving: {{netGiving}}*",
         "serviceFeesText": "Service fees: {{serviceFees}}",
-        "cryptoValueText": "This giving will be converted in cryptocurrency ({{cryptoGivings}})"
+        "cryptoValueText": "*This giving will be converted in cryptocurrency ({{cryptoGivings}})"
       },
       "linkMessageToast": "Learn more"
     }
