feat: adds billing information section translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -113,7 +113,10 @@
       "cardSection": {
         "currency": "Currency",
         "subtitleCard": "Choose your giving",
-        "buttonTextCard": "Next"
+        "buttonTextCard": "Next",
+        "billingInformationSection": {
+          "title": "Billing information"
+        }
       },
       "linkMessageToast": "Learn more"
     }
