--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -115,7 +115,11 @@
         "subtitleCard": "Escolha sua contribuição",
         "buttonTextCard": "Próximo",
         "billingInformationSection": {
-          "title": "Informações de cobrança"
+          "title": "Informações de cobrança",
+          "country": "País",
+          "state": "Estado",
+          "city": "Cidade",
+          "taxID": "CPF"
         }
       },
       "linkMessageToast": "Saiba mais"
