fix: adjust text of modal error

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,8 +11,8 @@
       "donateText": "Use ticket",
       "donateBlockedText": "Blocked",
       "pageTitle": "Causes",
-      "errorModalTitle": "Process failed",
-      "errorModalText": "It was not possible to finish this action. Please, check your internet connection and try again.",
+      "errorModalTitle": "Processing failed",
+      "errorModalText": "The network is unstable and it was not possible to process your donation. Try again shortly.",
       "errorModalButtonText": "Ok",
       "blockedModalTitle": "You don't have donation tickets",
       "blockedModalText": "Make a giving to Ribon's Donation Treasure to promote new donations",
