--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -11,8 +11,8 @@
       "donateText": "Usar ticket",
       "donateBlockedText": "Bloqueado",
       "pageTitle": "Causas",
-      "errorModalTitle": "Falha no processo",
-      "errorModalText": "Não foi possível concluir esta ação. Por favor verifique sua conexão com a internet e tente novamente.",
+      "errorModalTitle": "Falha no processamento",
+      "errorModalText": "A rede está instável e não foi possível registrar sua doação. Tente novamente, por favor.",
       "errorModalButtonText": "Ok",
       "blockedModalTitle": "Você não tem tickets doação",
       "blockedModalText": "Contribua para o Tesouro de Doação da Ribon e promova novas doações.",
