fix: adjust text of donation done button and path to redirect

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -30,7 +30,7 @@
     "donationDonePage": {
       "title": "Thank you for your donation!",
       "subtitle": "1 day of pet food for rescued animals",
-      "button": "Finish",
+      "button": "Check impact",
       "ngoTitle": "About ",
       "ngoInformation": "Amor em Patas is an organization that aims to rescue abandoned animals, take care of them and seek adoption.",
       "moreInfoButtonText": "More info"
