--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -30,7 +30,7 @@
     "donationDonePage": {
       "title": "Obrigada pela sua doação!",
       "subtitle": "1 dia de ração para animais resgatados",
-      "button": "Terminar",
+      "button": "Ver impacto",
       "ngoTitle": "Sobre ",
       "ngoInformation": "Amor em Patas é uma organização que tem como objetivo resgatar animais abandonados, cuidar deles e buscar adoção.",
       "moreInfoButtonText": "Mais informações"
