feat: add modal and hook to api

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -135,7 +135,7 @@
         "cardNumber": "Card number",
         "cardName": "Name on card",
         "cardDueDate": "Expiration",
-        "securityCode": "Card verification code"
+        "cvv": "Card verification code"
       },
       "linkMessageToast": "Learn more"
     }
