fix: adjust en translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -149,8 +149,8 @@
     "cardPaymentInformation": {
       "onErrorMessage": "Payment failed. Try again.",
       "loadingMessage": "Payment in progress...",
-      "modalSuccessTitle": "Payment",
-      "modalSuccessDescription": "Payment successful",
+      "modalSuccessTitle": "You've added {{value}} USDC to the treasury!",
+      "modalSuccessDescription": "Your donation has been converted into cryptocurrencies to fund more vouchers.",
       "modalSuccessButton": "Ok"
     }
   }
