fix: privacy policy adjust

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -19,11 +19,11 @@
       "blockedModalFirstButtonText": "Contribuir agora",
       "blockedModalSecondButtonText": "Talvez depois",
       "modalForm": {
-        "footerStartText": "Ao inserir seu e-mail e se inscrever, você aceita os",
+        "footerStartText": "Ao inserir seu e-mail e se inscrever, você aceita a nossa",
         "footerAnd": "e",
         "useTermsText": "Termos de Serviço",
         "privacyPolicyText": "Política de Privacidade",
-        "privacyPolicyLink": "https://blog.ribon.io/2017/12/20/politica-de-privacidade/",
+        "privacyPolicyLink": "https://ribon.io/2021/06/01/politica-de-privacidade-e-retencao-de-dados-pessoais/",
         "useTermsLink": "https://blog.ribon.io/2021/07/12/termos-e-condicoes-de-uso-da-ribon/"
       }
     },
