--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,11 +19,11 @@
       "blockedModalFirstButtonText": "Give now",
       "blockedModalSecondButtonText": "Maybe later",
       "modalForm": {
-        "footerStartText": "By signing up you agree to Ribon’s",
+        "footerStartText": "By signing up you agree to Ribon's",
         "footerAnd": "and",
         "useTermsText": "Terms of Service",
         "privacyPolicyText": "Privacy Policy",
-        "privacyPolicyLink": "https://blog.ribon.io/2021/09/16/privacy-and-retention-of-personal-data-policy/",
+        "privacyPolicyLink": "https://ribon.io/2022/06/10/privacy-and-personal-data-retention-policy/",
         "useTermsLink": "https://blog.ribon.io/2021/07/12/termos-e-condicoes-de-uso-da-ribon/"
       }
     },
