fix: copy confirmModalTitle and donateBlockedText

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,12 +4,12 @@
       "donationModalTitle": "You got a donation ticket",
       "donationModalBody": "Use your free ticket to make a donation",
       "donationModalButtonText": "Continue",
-      "confirmModalTitle": "Log in or sign up to use your donation ticket",
+      "confirmModalTitle": "Enter your e-mail to use your donation ticket",
       "confirmModalAuthTitle": "Confirm your donation",
       "confirmModalPrimaryButtonText": "Confirm",
       "confirmModalSecondaryButtonText": "Cancel",
       "donateText": "Use ticket",
-      "donateBlockedText": "Blocked",
+      "donateBlockedText": "No tickets",
       "pageTitle": "Causes",
       "errorModalTitle": "Processing failed",
       "errorModalText": "The network is unstable and it was not possible to process your donation. Try again shortly.",
