--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,12 +4,12 @@
       "donationModalTitle": "Você recebeu um ticket doação",
       "donationModalBody": "Use seu ticket gratuito para fazer uma doação",
       "donationModalButtonText": "Continuar",
-      "confirmModalTitle": "Entre ou registre-se para usar seu ticket doação",
+      "confirmModalTitle": "Insira seu e-mail para usar seu ticket doação",
       "confirmModalAuthTitle": "Confirmar doação",
       "confirmModalPrimaryButtonText": "Confirmar",
       "confirmModalSecondaryButtonText": "Cancelar",
       "donateText": "Usar ticket",
-      "donateBlockedText": "Bloqueado",
+      "donateBlockedText": "Sem tickets",
       "pageTitle": "Causas",
       "errorModalTitle": "Falha no processamento",
       "errorModalText": "A rede está instável e não foi possível registrar sua doação. Tente novamente, por favor.",
