--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -88,7 +88,7 @@
         "transactionSuccessText": "Transaction successful",
         "transactionFailedText": "Transaction failed",
         "linkMessageToast": "Learn more",
-        "cardDonationText": "Donated by card"
+        "cardDonationText": "Given by card"
       },
       "modalOnboarding": {
         "title": "Ribon’s Donation Treasure",
