refactor: changes donationModalButtonText copy

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,7 @@
   "donations": {
     "causesPage": {
       "donationModalTitle": "You got a donation ticket",
-      "donationModalButtonText": "Continue",
+      "donationModalButtonText": "Receive ticket",
       "confirmModalTitle": "Enter your e-mail to use your donation ticket",
       "confirmModalAuthTitle": "Confirm your donation",
       "confirmModalPrimaryButtonText": "Confirm",
