--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -2,7 +2,7 @@
   "donations": {
     "causesPage": {
       "donationModalTitle": "Você recebeu um ticket doação",
-      "donationModalButtonText": "Continuar",
+      "donationModalButtonText": "Receber ticket",
       "confirmModalTitle": "Insira seu e-mail para usar seu ticket doação",
       "confirmModalAuthTitle": "Confirmar doação",
       "confirmModalPrimaryButtonText": "Confirmar",
