--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,12 +28,13 @@
       }
     },
     "donationDonePage": {
-      "title": "Thank you for your donation!",
+      "title": "Thank you for the donation!",
       "subtitle": "1 day of pet food for rescued animals",
       "button": "Check impact",
       "ngoTitle": "About ",
       "ngoInformation": "Amor em Patas is an organization that aims to rescue abandoned animals, take care of them and seek adoption.",
-      "moreInfoButtonText": "More info"
+      "moreInfoButtonText": "More info",
+      "youDonatedText": "You donated"
     },
     "donationInProcess": {
       "animationText": "Donating...",
