feat: add impact card simulator to ImpactInformationSection

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -137,6 +137,9 @@
           "cardName": "Name on card",
           "cardDueDate": "Expiration",
           "cvv": "Card verification code"
+        },
+        "impactSimulationSection": {
+          "label": "Select a NGO"
         }
       },
 
