--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -137,6 +137,9 @@
           "cardName": "Nome impresso no cartão",
           "cardDueDate": "Vencimento",
           "cvv": "Código de segurança"
+        },
+        "impactSimulationSection": {
+          "label": "Selecione uma ONG"
         }
       },
 
