feat: adjust modal behavior and add tests to modalAnimation component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,6 +17,9 @@
       "blockedModalText": "Make a giving to Ribon's Donation Treasure to promote new donations",
       "blockedModalFirstButtonText": "Give now",
       "blockedModalSecondButtonText": "Maybe later",
+      "receiveTicketAnimationModalTitle": "Receiving Ticket...",
+      "receiveTicketAnimationModalOrigin": "Supportes",
+      "receiveTicketAnimationModalDestiny": "You",
       "modalForm": {
         "footerStartText": "By signing up you agree to Ribon's",
         "footerAnd": "and",
@@ -50,6 +53,8 @@
       "changeLanguageItem": {
         "changeLanguageText": "Change language"
       },
+      "donationModalTitle": "You got a donation ticket",
+      "donationModalButtonText": "Receive ticket",
       "logoutItem": {
         "logoutButton": "Sign Out",
         "logoutModalTitle": "Do you really want to sign out?",
